examples/test/testpolicy1027.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1027
  namespace: namespace199
spec:
  podSelector:
    matchLabels:
      key7: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key19: value39
          key42: value43
      podSelector:
        matchLabels:
          key48: value8
          key2: value8
          key49: value22
